Fixed some pesky top css, aligned the attributes bar hiding to expectations

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -3,7 +3,8 @@
 	display: grid;
 	margin: 0;
 	position: fixed; /* dont change it, vh does not work on mobiles with bottom footer */
-	top: 30px;
+	padding-top: 5px;
+	top: 0;
 	right: 0;
 	left: 0;
 	bottom: 5px;
@@ -645,7 +646,7 @@ canvas{
 
 @media screen and (max-width:700px){
 	body{
-		padding-top:50px;
+		padding-top:0px;
 	}
 	.wrapper{
 		top: 0px;
